Strip friends and likes

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -36,8 +36,6 @@ en:
   facebook:                                     "Facebook"
   share success:                                "Your message has been shared."
   share error:                                  "Sorry, there was an error sharing your message. Please try again."
-  error following user:                         "Sorry, there was an error following that user."
-  error unfollowing user:                       "Sorry, there was an error unfollowing that user."
   google plus:                                  "Google +"
   connect to:                                   "Connect to your %{connection} account"
   connected as user:                            "You are connected to %{connection} as %{username}."
@@ -45,24 +43,13 @@ en:
   deleted connection error:                     "Sorry, there was an error removing your connection to %{connection}."
   remove connection:                            "Remove"
   connection users:                             "Here are some YouVersion users you're connected to on %{connection}:"
-  connection marketing:                         "YouVersion is more fun with friends! Link your YouVersion account to your other social networks and instantly find and follow your friends on YouVersion. Linking your accounts also enables you to share content with just a few clicks. We will never post anything without your approval."
+  connection marketing:                         "YouVersion is more fun with friends! Link your YouVersion account to your other social networks and instantly find your friends on YouVersion. Linking your accounts also enables you to share content with just a few clicks. We will never post anything without your approval."
   next step connections:                        "Next: Link your accounts and find your friends"
-  you are now following:                        "You are now following %{username}"
-  you are no longer following:                  "You are no longer following %{username}"
-  user follows:                                 "%{user} is following you."
-  user does not follow:                         "%{user} does not follow you."
-  no following found self:                      "You're not following anyone yet. Visit the <a href='%{link}'>Find Friends</a> page and find some friends!"
-  no followers found self:                      "You don't have any followers yet. Visit the <a href='%{link}'>Find Friends</a> page and find some friends!"
-  no followers found other:                     "No one is following %{username} yet."
-  no following found other:                     "%{username} is not following anyone yet."
-  no likes found:                               "%{username} hasn't liked anything yet."
   no notes found:                               "%{username} doesn't have any notes."
   no recent activity:                           "%{username} does not have any recent activity."
   no badges found yourself:                     "You haven't earned any badges yet."
   no badges found other:                        "%{username} hasn't earned any badges yet."
   see users badges:                             "See all of %{username}'s badges"
-  followers:                                    "Followers"
-  following:                                    "Following"
   highlight:                                    "Highlight"
   bookmark:                                     "Bookmark"
   earned badge date:                            "Earned by %{username} %{ago} ago"
@@ -147,13 +134,6 @@ en:
   or:
     lower:                                      "or"
     upper:                                      "OR"
-  likes:
-    my likes:                                   "My Likes"
-    all likes:                                  "All Likes"
-    none exist blurb:                           "Sorry, no likes here!"
-    likes:                                      "Likes"
-    like button text:                           "Like"
-    unlike button text:                         "Unlike"
   notes:
     list title:                                 "Notes"
     loading community:                          "Loading community notes..."
@@ -182,9 +162,7 @@ en:
     not found:                                  "YouVersion allows you to associate video, audio, images, text, and links to other websites with any verse or series of verses in the Bible. It's a way to take part in the YouVersion community by sharing what you're learning and thinking as you engage with Scripture. Get started now by selecting a verse(s) in the Bible reader and adding your note. It's that easy."
     cancel:                                     "Cancel"
     pop out:                                    "Pop out"
-    notes i like:                               "Notes I Like"
     none found:                                 "No notes found..."
-    see my likes:                               "See All My Likes"
     successfully deleted:                       "Note Removed"
   ref:
     loading secondary:                          "Loading Reference in Secondary Version..."
@@ -211,8 +189,6 @@ en:
   users:
     unverified heading:                         "Almost Done!"
     unverified message:                         "It looks like you're trying to sign in to an account that hasn't been set up completely. You only have one more step: simply click on the verification link in the confirmation email you received from YouVersion. Can't find it? Check your spam folder or <a href='%{resend_path}'>resend the confirmation email</a>."
-    not following you:                          "Is not following you"
-    following you:                              "Is following you"
     reset connection:                           "Sorry, an error has occurred. Please remove and then reconnect this connection."
     settings:                                   "Settings"
     no connection friends:                      "None of your %{connection} friends appear to be on YouVersion yet."
@@ -228,15 +204,8 @@ en:
     welcome to youversion:                      "Welcome to the YouVersion community!"
     confirm email:                              "Please check your email and click the link to confirm your registration."
     sign up for an account:                     "Create a Free YouVersion Account"
-    follow:                                     "Follow"
-    follow user:                                "Follow %{user}"
-    unfollow:                                   "Unfollow"
-    unfollow user:                              "Unfollow %{user}"
-    following title:                            "People I'm Following"
-    user does not follow you:                   "%{user} does not follow you."
     recent activity:                            "Recent Activity"
     my recent_activity:                         "My Recent Activity"
-    started following:                          "Started Following"
     subscribed to plan:                         "Users Subscribed to %{plan}"
     reading:                                    "Users Reading This Plan"
     subscribed previously:                      "Started %{time_ago} ago"
@@ -268,8 +237,6 @@ en:
     user friends:                               "%{user}'s Friends"
     my bookmarks:                               "My Bookmarks"
     user bookmarks:                             "%{user}'s Bookmarks"
-    my likes:                                   "My Likes"
-    user likes:                                 "%{user}'s Likes"
     my badges:                                  "My Badges"
     revised date:                               "Last revised on %{date}"
     update email copy:                          "Enter a new email address and click Update Email. We'll send you a link to confirm your new email address."
