--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -544,6 +544,12 @@ en:
     completed notice:                           "Congratulations! You have completed your reading plan."
     exit:                                       "Exit"
     loading sidebar content:                    "Loading sidebar content..."
+  licenses:
+    auth:
+      login notice:                             "To validate your purchased content, please login to your YouVersion account below or <a href='/licenses/register'>%{signup}</a>."
+      signup notice:                            "To validate your purchased content, register a free YouVersion account below or <a href='/licenses/authenticate'>%{login}</a> if you already have an account."
+      signup link text:                         "sign up for a free account"
+      login link text:                          "sign in"
   registration:
     placeholder:
       email:                                    "Enter your email address"
