--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -545,6 +545,18 @@ en:
     exit:                                       "Exit"
     loading sidebar content:                    "Loading sidebar content..."
   licenses:
+    authorized:
+      heading:                                  "Your content has been authorized"
+      description:                              "You may now <a href='%{content_link}'>view the content you purchased</a> from %{vendor} on YouVersion!"
+    has errors:                                 "There were errors with your request:"
+    confirm:
+      email:                                    "To unlock your content, please check your email inbox for a confirmation email from YouVersion and click the link inside to confirm your registration."
+    request:
+      invalid_vendor_signature:                 "License validation failed: Invalid vendor signature"
+      invalid_vendor_id:                        "License validation failed: Invalid vendor ID"
+      invalid_item_ids:                         "License validation failed: Invalid items"
+    vendor_transaction_id:
+      duplicate:                                "Transaction id: This transaction id has already been registered"
     auth:
       login notice:                             "To validate your purchased content, please login to your YouVersion account below or <a href='/sign-up?source=licenses'>%{signup}</a>."
       signup notice:                            "To validate your purchased content, register a free YouVersion account below or <a href='/sign-in?source=licenses'>%{login}</a> if you already have an account."
