--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -1,4 +1,20 @@
 zh-CN:
+  api:
+    users agree bool: "您必须同意使用协议和条款才能注册账户。"
+    users confirm password matches: "新密码不匹配。"
+    users email email: "电子邮件地址无效。"
+    users email email rfc: "您提供的电子邮件地址无效。"
+    users email not available: "该电子邮件已被其它账户注册。"
+    users email not found: "没有与此邮件相关的帐号。"
+    users email required: "请输入正确的电子邮件地址。"
+    users hash verified: "这个账户已经被确认了。"
+    users password change: "您的新密码必须和旧的不同才行。"
+    users password length: "密码应至少需要有6个字符。"
+    users password required: "请务必输入密码。"
+    users username alpha numeric extra: "用户名只能包含字母、数字和减号。"
+    users username not available: "您选择的用户名不可用。"
+    users username or password invalid: "您提供的用户名或密码无效。"
+    users username required: "请务必输入用户名。"
   now: "今日社区"
   celebrating 50MM: "庆祝5000万的安装！"
   link: "链接"
@@ -105,6 +121,7 @@ zh-CN:
   chapter: "章节"
   bible: "圣经"
   notes title: "笔记"
+  videos: "视频"
   friends: "朋友"
   groups: "群组"
   mobile: "移动设备"
@@ -225,6 +242,7 @@ zh-CN:
     other user profile: "%{username} 的个人档案"
     my password: "更改密码"
     edit password: "更改密码"
+    edit password errors: "以下错误阻止您更换密码："
     picture: "相片"
     edit picture: "更换照片"
     edit notifications: "管理通知"
@@ -233,9 +251,9 @@ zh-CN:
     edit account_existence: "删除账户"
     delete account button: "删除我的 YouVersion 账户"
     no devices: "没有设备连接到您的YouVersion 账户。"
-    no devices download copy: "基于 YouVersion 的在线圣经，YouVersion 圣经软件是一个几乎可以安装在任何移动设备上的免费圣经。YouVersion 圣经软件允许用户阅读圣经、在社交网络上分享经文、给自己喜欢的经文添加书签，还有更多功能——全部都以一种更符合用户日益增长的移动生活的方式进行。请通过您的移动设备访问 <a href='http://www.youversion.com/download'>youversion.com/download</a> 以便下载 YouVersion 圣经软件并连接到您的账户。"
+    no devices download copy: "基于 YouVersion 的在线圣经，YouVersion 圣经软件是一个几乎可以安装在任何移动设备上的免费圣经。YouVersion 圣经软件允许用户阅读圣经、在社交网络上分享经文、给自己喜欢的经文添加书签，还有更多功能——全部都以一种更符合用户日益增长的移动生活的方式进行。请通过您的移动设备访问 <a href='https://www.bible.com/download'>bible.com/download</a> 以便下载 YouVersion 圣经软件并连接到您的账户。"
     yes delete: "是的，删除我的账户"
-    account delete success: "您的 YouVersion 账户已经成功删除。我们希望您能继续寻找更有意义的与圣经互动的方式。这些软件或许对您有帮助，请前往：<a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
+    account delete success: "您的 YouVersion 账户已经成功删除。我们希望您能继续寻找更有意义的与圣经互动的方式。这些软件或许对您有帮助，请前往：<a href= 'https://www.bible.com/free-bible-apps'> http://www.bible.com/free-bible-apps </a>"
     delete account description: "如果您删除账户，您将彻底删除您在 YouVersion 网站和圣经软件上的个人信息、历史记录和专属信息（比如笔记、书签、高亮显示的内容等）。这个行为一旦实施，您或者我们都不能恢复。如果您确定想删除账户，请根据下面提示继续。"
     user recent activity: "%{user} 最近的活动"
     user notes: "%{user} 的笔记"
@@ -281,11 +299,11 @@ zh-CN:
       device id title: "唯一设备身份和 GPS 位置"
       device id text: "当您使用 YouVersion 圣经软件时，我们可以获取您的唯一设备身份(“UDID”)，IP 地址和/或 GPS 位置。通过这些信息，我们可以为您提供量身定做的服务。获取这些信息是为了统计使用我们的服务或部分服务的设备总数，跟踪使用总量，分析数据，以及更有效地与您沟通。我们可以把这些信息和第三方信息结合起来，让您获得更佳体验，提升我们的服务。我们不会与第三方共享与您的 UDID 或 GPS 位置相关的个人信息。"
       cookies title: "Lifechurch.tv 网站的 cookies"
-      cookies text: "当您访问 <a href='www.youversion.com'>www.youversion.com</a>时，我们可以发送一个或多个 Cookie 到您的电脑，这样我们就能识别您的浏览器。(Cookie 就是一个很小的文本文件，其中包含一串字符) 接受我们的 Cookie 使浏览器可以在您下次打开我们的网页时记录您的使用偏好。虽然大多数浏览器默认接受 Cookie，但您可以设置浏览器拒绝所有 Cookie，或提醒您正在接收 Cookie。如果您关闭了 Cookie 的接收，YouVersion 的部分功能或服务将无法正常生效。"
+      cookies text: "当您访问 <a href='https://www.bible.com'>www.bible.com</a>时，我们可以发送一个或多个 Cookie 到您的电脑，这样我们就能识别您的浏览器。（Cookie 其实就是一个很小的文本文件，其中包含一串字符）接受我们的 Cookie 使浏览器可以在您下次打开我们的网页时记录您的使用偏好。虽然大多数浏览器默认接受 Cookie，但您可以设置浏览器拒绝所有 Cookie，或提醒您正在接收 Cookie。如果您关闭了 Cookie 的收发，YouVersion 的部分功能或服务将无法正常生效。"
       log title: "日志信息"
       log text: "当您使用 YouVersion 时，我们的服务器会在您访问我们的网站时自动记录您的浏览器所发送的信息。这些服务器记录的信息包括您的网页请求，IP 地址，浏览器类型，浏览器语言，请求日期与时间，以及可以识别您的浏览器的一个或多个 Cookie。"
       communications title: "用户通讯"
-      communications text: "您通过 <a href='www.youversion.com/live'>www.youversion.com/live</a> 提交的个人信息或请求会被发送到群组管理员那里。群组管理员或者其中一个管理员将会处理这些信息。当您通过发送电子邮件或者信息给 LifeChurch.tv 所属的任何一个网站，我们将保留这些信息来处理您的问题，回应您的请求并改善我们的服务。"
+      communications text: "您通过 <a href='https://www.bible.com/live'>www.bible.com/live</a> 提交的个人信息或请求会被发送到群组管理员那里。群组管理员或者其中一个管理员将会处理这些信息。当您通过发送电子邮件或者信息给 LifeChurch.tv 所属的任何一个网站，我们将保留这些信息来处理您的问题，回应您的请求并改善我们的服务。"
       third party title: "第三方站点"
       third party text: "本隐私政策仅适用于由 LifeChurch.tv 所有并运营的网站和应用程序。 LifeChurch.tv 不能控制其他从我们的网页和服务链接出去的其他网站。其他网站可能在您的电脑上储存它们的缓存或其他文件，收集数据或者要求您的个人资料。如果选择访问他们的网站，您需要详细了解他们各自的隐私政策。"
       information use title: "我们会如何使用您的信息？"
@@ -304,13 +322,13 @@ zh-CN:
       title: "使用条款"
       translation disclaimer: "使用条款是为了方便您查阅而翻译，LifeChurch.tv 对于翻译的准确性不做任何承诺或保证。如果英文和译文不一致，应以英文为准。"
       acceptance title: "接受使用条款"
-      acceptance text: "点击“我同意”，意味着您确认您已经阅读并同意受 YouVersion 使用条款 的约束。LifeChurch.tv 通过YouVersion 应用程序和各种网站 (包括 <a href-'http://youversion.com'>http://youversion.com</a> ，统称 “YouVersion” ) 在因特网和万维网（以下称“网络”）上提供的服务，须受以下使用条款的约束。 LifeChurch.tv 可能不时更新使用条款而不另行通知，这些使用条款的最新版本保存在 <a href='http://youversion.com/terms'>http://youversion.com/terms</a> 。在使用 YouVersion 时，您也应受到所有在 YouVersion 网站不时发布的附加指引或规则的约束。前述附加指引或规则皆被纳入使用条款作为使用条款的参考。举报违反使用条款的行为，请发送电子邮件到  <a href='mailto:legal@youversion.com'>legal@youversion.com</a>"
+      acceptance text: "点击“我同意”，意味着您确认您已经阅读并同意受 YouVersion 使用条款 的约束。LifeChurch.tv 通过 YouVersion 应用程序和各种网站 (包括 <a href-'https://www.bible.com'>http://bible.com</a> ，统称 “YouVersion” ) 在因特网和万维网 (以下称“网络”) 上提供的服务，须受以下使用条款的约束。LifeChurch.tv 可能不时更新使用条款而不另行通知，这些使用条款的最新版本保存在 <a href='https://www.bible.com/terms'>https://bible.com/terms</a> 。在使用 YouVersion 时，您也应受到所有在 YouVersion 网站不时发布的附加指引或规则的约束。前述附加指引或规则皆被纳入使用条款作为使用条款的参考。举报违反使用条款的行为，请发送电子邮件到  <a href='mailto:legal@youversion.com'>legal@youversion.com</a>"
       description title: "服务说明"
       description text: "LifeChurch.tv 通过 YouVersion 免费向用户提供多样化的服务，包括但不限于在线观看视频，博客博文和评论，文章评论，其他各种通讯工具，论坛和个性化的内容。在使用 YouVersion 时，您理解这种使用可能包括与LifeChurch.tv 的通信，包括但不限于服务通告、管理信息和您个别订阅的其他信息。您理解并同意，您自己负责获得 YouVersion 的使用权，这可能包括设备和第三方费用（例如互联网服务商费，通话费，或与消息传递和显示有关的其他费用）。"
       registration title: "您的注册义务"
       registration text: "您确认并同意：<ul><li> 根据 YouVersion 登记表的要求，提供真实、准确、最新及完整的个人信息（以下称“注册资料”），和 </li>»<li> 维护和及时更新注册资料以保持真实、准确、最新、完整。如果 LifeChurch.tv 怀疑这些信息不真实、不准确或不完整，LifeChurch.tv 有权暂停或终止您的账户，并拒绝现在或将来对 YouVersion 的任何使用（或其任何部分的使用）。 LifeChurch.tv 关注其所有用户，特别是儿童的安全和隐私。出于这个原因，允许自己13岁以下的孩子使用 YouVersion 的父母必须确认：YouVersion 旨在吸引广大的读者，作为孩子的法定监护人，确定YouVersion 是否适合您的孩子是您的责任。</li></ul>"
       privacy title: "YouVersion 的隐私政策"
-      privacy text: "您的注册资料和其他信息受到我们的隐私政策（详见 <a href='http://youversion.com/privacy'>http://youversion.com/privacy</a>）约束。您了解，通过 YouVersion 的使用，您同意这些信息的收集和使用（如隐私政策所列），包括由 <a href='http://LifeChurch.tv'>Lifechurch.tv</a> 把这些信息转移给美国或者其他国家储存、处理和使用。"
+      privacy text: "您的注册资料和其他信息受到我们的隐私政策 (详见 <a href='https://www.bible.com/privacy'>https://bible.com/privacy</a>) 约束。您了解，通过 YouVersion 的使用，您同意这些信息的收集和使用（如隐私政策所列），包括由 <a href='http://LifeChurch.tv'>Lifechurch.tv</a> 把这些信息转移给美国或者其他国家储存、处理和使用。"
       account title: "会员帐户、密码和保全"
       account text: "在完成 You Version 的注册过程中，您将收到一个密码和账户设置。您对密码和账户有保密责任，并且对于在您的账户和密码下而发生的一切活动，您承担全部责任。您同意： <ul><li>立刻通知 LifeChurch.tv 一切未经授权的使用您的账户或者密码或者其他违反数据安全的行为，和 </li><li>确保您在每次使用您的账户之后安全退出。</li></ul>"
       conduct title: "成员行为准则"
@@ -517,6 +535,27 @@ zh-CN:
     must start to complete: "请开始这个读经计划来保存已完成的读经！"
     invalid reference: "很抱歉！此读经计划中的参考经文可能不在您选择的圣经版本中。试着选择一个不同的圣经版本。如果您还是看到这条信息，请通知我们的 <a href='%{support_url}'>服务支持团队</a>！"
     sidebar notice: "您在查看读经计划"
+    completed notice: "恭喜您完成了读经计划。"
+    exit: "退出"
+    loading sidebar content: "载入侧栏内容..."
+  licenses:
+    authorized:
+      heading: "您的信息已经获得授权。"
+      description: "现在可以查看您通过 YouVersion 从 %{vendor} 购买的<a href='%{content_link}'>内容</a>了！"
+    has errors: "您的请求出错："
+    confirm:
+      email: "要确认您所购买视频内容的授权，请查收您的 Email 收件箱中来自 YouVersion 的确认邮件，点击里面的链接确认您的注册。"
+    request:
+      invalid_vendor_signature: "许可验证失败：无效的供应商签名"
+      invalid_vendor_id: "许可验证失败：无效的供应商ID"
+      invalid_item_ids: "许可验证失败：存在无效的项目"
+    vendor_transaction_id:
+      duplicate: "交易号：此交易号已经被注册"
+    auth:
+      login notice: "要验证您所购买的内容，请在下方登录您的 YouVersion 账户或进行注册<a href='/sign-up?source=licenses'>%{signup}</a>。"
+      signup notice: "要验证您所购买的内容，请在下方注册一个免费的 YouVersion 账户，或登录已有的账户 <a href='/sign-in?source=licenses'>%{login}</a>。"
+      signup link text: "申请一个免费帐户"
+      login link text: "登录"
   registration:
     placeholder:
       email: "输入您的电子邮件"
@@ -691,6 +730,8 @@ zh-CN:
       translation notes: "脚注"
       cross references: "交叉引用经节"
   app errors:
+    404 plans explanation: "您在寻找 <a href='%{plan_path}'>%{title}</a> 读经计划？"
+    404 contact support: "有困难的话，请联系我们的 <a href='%{support_url}'>客服团队</a>."
     404 explanation: "您可能需要再次从<a href='%{reader_path}'>首页</a>试一下。如果仍然不行，请通知我们的 <a href='%{support_url}'>服务支持团队</a>！"
     404 message: "很抱歉！您要寻找的页面未被找到！"
     408 message: "很抱歉我们的服务器没有及时响应。"
