--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -759,3 +759,8 @@ en:
     public domain:                              "Public Domain"
     loading:                                    "Loading More Versions..."
     load error:                                 "Sorry, there was a problem loading more versions. Close this menu and reopen to try again."
+  reader help:
+    title:                                      "Reader Help"
+    line 1:                                     "Line 1 (<strong>Allows HTML</strong>)"
+    line 2:                                     "Line 2?"
+    line 3:                                     "Line 3!"
